--- a/latest.html
+++ b/latest.html
@@ -49,7 +49,7 @@
           
             <div class="slide-in-left news-item">
            
-<a class="link" href="zain.html"><H2 class=link>Zain Reaches the age of 1 after 1 full year since birth</h2>
+<a class="link" href="Zain.html"><H2 class=link>Zain Reaches the age of 1 after 1 full year since birth</h2>
 <img src="ZAIN1.jpg" alt="zain" width="290" ></a>
 <p>
 This week's Breaking News as we approach The 1st of october <br>
