--- a/Z-A-S News.html
+++ b/Z-A-S News.html
@@ -35,7 +35,7 @@
 
 
             <ul>
-                <li><a class="fade-in link" href="about.html">About Us</a></li>
+                <li><a class="fade-in link" href="About.html">About Us</a></li>
 
                 <li><a class="fade-in link" href="AOTW.html">Trending</a></li>
 
@@ -141,7 +141,7 @@
          </div>
 
  <div class="slide-in-right news-item">
-<a class="link" href="zain.html">
+<a class="link" href="Zain.html">
 
 <H2 class=link>Zain Reaches the age of 1 after 1 full year since birth</h2>
 <img loading="lazy" src="ZAIN1.jpg" alt="zain" width="250" ></a>
@@ -150,7 +150,7 @@
 This week's Breaking News as we approach The 1st of october <br>
 
 and after just 1 month of his....
-<a class=link href="zain.html">Read More.</a></p>
+<a class=link href="Zain.html">Read More.</a></p>
 
             </div>
             </section>
