--- a/riyadh.html
+++ b/riyadh.html
@@ -19,7 +19,7 @@
 <article>
 
 <H2>A Season of Wonder: Riyadh's Transformation</h2>
-<img src="riyadh.png" alt="riyadh"  max-height="300" max-width="510" >
+<img src="riyadh.png" alt="riyadh"  height="auto" width="auto" >
 
 <p>
 Today marks the start of the Riyadh season,<br> 
