--- a/riyadh.html
+++ b/riyadh.html
@@ -19,7 +19,7 @@
 <article>
 
 <H2>A Season of Wonder: Riyadh's Transformation</h2>
-<img src="riyadh.png" alt="riyadh"  style="max-width: 300px; min-width: 200px;" >
+<img src="riyadh.png" alt="riyadh"  style="width: 300px; min-width: 200px;" >
 
 <p>
 Today marks the start of the Riyadh season,<br> 
