--- a/riyadh.html
+++ b/riyadh.html
@@ -19,7 +19,7 @@
 <article>
 
 <H2>A Season of Wonder: Riyadh's Transformation</h2>
-<img src="riyadh.png" alt="riyadh"  class=article-pic >
+<img src="riyadh.png" alt="riyadh"  width="65%">
 
 <p>
 Today marks the start of the Riyadh season,<br> 
