--- a/Zain.html
+++ b/Zain.html
@@ -16,7 +16,7 @@
     <h1>|  Latest  |  <h4>3 days ago - by Zeyad</h4></h1>
         </header>
 <article>
-<img src="ZAIN1.jpg" alt="" max-height="280">
+<img src="ZAIN1.jpg" alt="" height="50%">
 <H2>Zain Reaches the age of 1 after 1 full year since birth</h2>
 
 <p>
