--- a/latest.html
+++ b/latest.html
@@ -24,7 +24,7 @@
             </header>
 
 <div class="bgtoneswitch">
-  <a href="latest - dark.html">
+  <a href="latest - Dark.html">
 
   <img class="img slide-in-left" src="dark.png" 
    alt="bgtoneswitch" height="75" width="75">
