--- a/AOTW.html
+++ b/AOTW.html
@@ -12,7 +12,7 @@
     <header>
    <div class="logo">
  <a href="Z-A-S News.html">
-    <img src="image2.png" alt="logo" width="80">
+    <img src="image2.png" alt="logo" width="70%">
     <span class="HeaderTitle">Z A S News</span>
 </a>   </div>
        <h1>|  Trending  |  Article of the week  |</h1>
