--- a/AOTW.html
+++ b/AOTW.html
@@ -24,7 +24,7 @@
 
         
             <h2>Glimpse into the Quantum World: The Enigma of Entanglement</h2>
-            <img src="image.png" alt="Enigma of Quantum Entanglement" width="550" >
+            <img src="image.png" alt="Enigma of Quantum Entanglement" width="80%">
             <p>Quantum entanglement,<br> a phenomenon first described by Albert Einstein as "spooky action at a distance,"<br>
              is one of the most perplexing concepts in modern physics.
               It defies our classical understanding of reality,
