--- a/Z-A-S News.html
+++ b/Z-A-S News.html
@@ -11,11 +11,13 @@
 
     <link rel="stylesheet" href="style.css"> 
   
+
+
     <meta http-equiv="refresh" content="600">
     
     </head>
 <body>
-<button class="fade-in scrolltop" onclick="scrollToTop()" id="scrollBtn" title="Go to top">Go To Top</button>
+<button class="fade-in scrolltop" onclick="scrollToTop()" id="scrollBtn" title="Go to top">Top</button>
 
 <header class=dheader id="header">
     <div class="logo">
