--- a/Z-A-S News.html
+++ b/Z-A-S News.html
@@ -9,10 +9,12 @@
 
     <title>Home | Z-A-S</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+     rel="stylesheet" crossorigin="anonymous" 
+     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" >
+
     <link rel="stylesheet" href="style.css"> 
   
-
-
     <meta http-equiv="refresh" content="600">
     
     </head>
