--- a/ytvid.html
+++ b/ytvid.html
@@ -11,7 +11,7 @@
     <header>
     <div class="logo">
          <a href="Z-A-S News.html">
-                <img src="image2.png" alt="logo" id="logo" width="96">
+                <img src="pics/image2.png" title="Go Home" alt="logo" id="logo" width="96">
                 <span class="HeaderTitle">Z A S News</span></a> </div>
        <h1>|  Oops! |</h1>
        <h4>10 years Ago - by ----</h4>
@@ -31,3 +31,7 @@
       
       
       </main>
+       <script src="scripts/darkmode.js"></script>
+        <script type="text/javascript"src="scripts/script.js" ></script>
+</body>
+</html>
