--- a/ytvid.html
+++ b/ytvid.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="Z-A-S News.css">
 </head>
 <body>
+<button class="loading" id="loading">Loading...</button>  
+
     <header>
     <div class="logo">
          <a href="Z-A-S News.html">
-                <img src="pics/image2.png" title="Go Home" alt="logo" id="logo" width="96">
+                <img src="pics/image452.png" title="Go Home" alt="logo" id="logo" width="96">
                 <span class="HeaderTitle">Z A S News</span></a> </div>
        <h1>|  Oops! |</h1>
        <h4>10 years Ago - by ----</h4>
