--- a/Z-A-S News.html
+++ b/Z-A-S News.html
@@ -24,7 +24,7 @@
 
 
       
-        <div class="loading"  class="modal modal-sheet position-static d-block bg-body-secondary p-4 py-md-5" tabindex="-1" role="dialog" id="modalTour">
+        <div class="loading2"  class="modal modal-sheet position-static d-block bg-body-secondary p-4 py-md-5" tabindex="-1" role="dialog" id="modalTour">
           <div class="modal-dialog" role="document">
             <div class="modal-content rounded-4 shadow">
               <div class="modal-body p-5">
@@ -238,7 +238,6 @@
             <h3>
                 &copy All Rights Reserved. Zeyad - 2024
             </h3> 
-
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
