Added  Reset Local Storage button

--- a/About.html
+++ b/About.html
@@ -76,6 +76,8 @@
                 <li class="fade-in nav-item" title="See what's Trending" ><a class="link nav-link" href="AOTW.html">Trending</a></li>
 
                 <li class="fade-in  nav-item" title="take a look at our Latest News" ><a class="link nav-link"href="latest.html">Latest</a></li>
+
+            
             </ul>
     <br>
 
@@ -83,7 +85,7 @@
 
 
       <h3>DISCLAIMER:</h3>  <h5>All dates and all info may not be factually acurate, proceed with caution<h5>
-       <br><h3>&copy All Rights Reserved. Zeyad - 2024</h3> 
+       <br><h3>&copy All Rights Reserved. Zeyad - 2024</h3>     <button class="button" id="resetStorage">Reset Data?</button>
         </footer>
     </main>
 
