--- a/About.html
+++ b/About.html
@@ -62,8 +62,6 @@
 </Article>
 <h2 style="white-space: pre-wrap;">This is Zeyad's "Ultimate" playlist<h5>no one asked for it but still</h5></h2>
 
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6whIM5sGTuXPJatY5rxjJG?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
 
 <footer>
 
@@ -84,7 +82,7 @@
 <h2>  Visit us on our social Media | <a class=link href="https://linktr.ee/zeyadsukk">Click now!</a><h2>
 
 
-      <h3>DISCLAIMER:</h3>  <h5>All dates and all info may not be factually acurate, proceed with caution<h5>
+      <h3>DISCLAIMER:</h3>  <h5>All dates and all info may not be factually acurate, proceed with caution</h5>
        <br><h3>&copy All Rights Reserved. Zeyad - 2024</h3>     <button class="button" id="resetStorage">Reset Data?</button>
         </footer>
     </main>
@@ -97,3 +95,4 @@
         <script type="text/javascript"src="scripts/script.js" ></script>
 
         </body>
+      </html>
