--- a/About.html
+++ b/About.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<button class="loading" id="loading">Loading...</button>  
+
 
 <button id="theme-switch" title="Switch" class="theme-switch slide-in-left">            
               <svg xmlns="http://www.w3.org/2000/svg" alt="modeswitch" title="Switch to Dark" height="50px" viewBox="0 -960 960 960" width="50px" fill="var(--fillcolor)"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
@@ -62,7 +62,8 @@
 </Article>
 <h2 style="white-space: pre-wrap;">This is Zeyad's "Ultimate" playlist<h5>no one asked for it but still</h5></h2>
 
-
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6whIM5sGTuXPJatY5rxjJG?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    
 <footer>
 
          <ul class="position-fix nav nav-pills alsonavpills" >
