--- a/ytvid.html
+++ b/ytvid.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
 
     <title>404 Not Found | :(</title>
-    <link rel="stylesheet" href="Z-A-S News.css">
+    
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+        rel="stylesheet" crossorigin="anonymous" 
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" >
+        <link rel="stylesheet" href="style.css"> 
+        <meta http-equiv="refresh" content="600">
 </head>
 <body>
 <button class="loading" id="loading">Loading...</button>  
