--- a/ytvid.html
+++ b/ytvid.html
@@ -11,6 +11,16 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" >
         <link rel="stylesheet" href="style.css"> 
         <meta http-equiv="refresh" content="600">
+<style>  
+h1 {
+  text-align: center; /* Aligns text in the center horizontally */
+  display: flex;
+  justify-content: center; /* Centers the h1 horizontally in the flex container */
+  align-items: center; /* Centers the h1 vertically in the flex container */
+  height: 100vh; /* Ensures the flex container takes full viewport height */
+}
+</style>
+    
 </head>
 <body>
 <button class="loading" id="loading">Loading...</button>  
