--- a/ytvid.html
+++ b/ytvid.html
@@ -58,10 +58,10 @@ h1 {
     <main>
        
 
-        <h1>Sorry<br>
-        404 Not Found
-        <br><br>
-        :(</h1>
+        <h1>Hmmmm<br>
+            Couldn't find this page, Maybe someone stole it <br>
+        404 | Not found
+        <br>
       
       <Article>
      <h1> <a class=link href="Z-A-S News.html">Go Home?<a></h1>
