--- a/ytvid.html
+++ b/ytvid.html
@@ -59,9 +59,9 @@ h1 {
        
 
         <h1>Hmmmm<br>
-            Couldn't find this page, Maybe someone stole it <br>
+  
         404 | Not found
-        <br>
+        <br>          Couldn't find this page, Maybe someone stole it <br><br>
       
       <Article>
      <h1> <a class=link href="Z-A-S News.html">Go Home?<a></h1>
