--- a/ytvid.html
+++ b/ytvid.html
@@ -18,6 +18,9 @@ h1 {
   justify-content: center; /* Centers the h1 horizontally in the flex container */
   align-items: center; /* Centers the h1 vertically in the flex container */
 }
+    footer{
+       margin-top: 50vh;
+    }
 </style>
     
 </head>
