--- a/ytvid.html
+++ b/ytvid.html
@@ -19,7 +19,10 @@ h1 {
   align-items: center; /* Centers the h1 vertically in the flex container */
 }
     footer{
-       margin-top: 50vh;
+       margin-top: 22vh;
+    }
+    header{
+         margin-bottom: 22vh;
     }
 </style>
     
