nav bar wrap fixed

--- a/AOTW.html
+++ b/AOTW.html
@@ -93,8 +93,7 @@ As scientists continue to explore the mysteries of quantum entanglement,
                 <li class="fade-in nav-item" title="take a look at our Latest News" ><a class="link  nav-link"  href="latest.html">Latest</a></li>
             </ul>
             <br>
-  <h2>  Visit us on our social Media | <a class=link href="https://linktr.ee/zeyadsukk">Click now!</a><h2>
-       <h4>NOTICE: This Website is intended on light Mode</h4><br>
+  <h2>  Visit us on our social Media | <a class=link href="https://linktr.ee/zeyadsukk">Click now!</a></h2>
        <br><h3>&copy All Rights Reserved. Zeyad - 2024</h3> 
         </footer>
 
