--- a/Z-A-S News.html
+++ b/Z-A-S News.html
@@ -24,7 +24,7 @@
 
 
       
-        <div class="loading2"  class="modal modal-sheet position-static d-block bg-body-secondary p-4 py-md-5" tabindex="-1" role="dialog" id="modalTour">
+        <div class="loading2" class="loading2 modal modal-sheet position-static d-block bg-body-secondary p-4 py-md-5" tabindex="-1" role="dialog" id="modalTour">
           <div class="modal-dialog" role="document">
             <div class="modal-content rounded-4 shadow">
               <div class="modal-body p-5">
@@ -79,7 +79,7 @@
 
               <button class="slide-in-right scrolltop" onclick="scrollToTop()" id="scrollBtn" title="Go to top"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--main)"><path d="M160-760v-80h640v80H160Zm280 640v-408L336-424l-56-56 200-200 200 200-56 56-104-104v408h-80Z"/></svg></button>
 
-        <header class="dheader d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom" id="header">
+        <header class="dheader d-flex flex-wrap justify-content-center py-1 mb-2 border-bottom" id="header">
 
 
             <a class="logo d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" href="Z-A-S News.html">
@@ -168,7 +168,7 @@
               </div>
 
               <div class="slide-in-right news-item">
-                <a class=link href="ytvid.html"><h2 class=link>
+                <a class=link href="youtubevideo.html"><h2 class=link>
 
                 Mahmoud Sukkary's Youtube Video Debuts 1.3m views</h2>
                 <img loading="lazy" src="pics/404.png" alt="error"  width="180" >
@@ -177,7 +177,7 @@
                 <p>a few days ago Youtube has been put by storm <br>
 
                 when Mahmoud El-Sukkary Released The video <br>
-                Titled....<a class=link href="ytvid.html">Read More.</a></p>
+                Titled....<a class=link href="youtubevideo.html">Read More.</a></p>
 
 
               </div>
