fixed some bugs

--- a/ZAS-News.html
+++ b/ZAS-News.html
@@ -83,19 +83,19 @@
         <header class="dheader d-flex flex-wrap justify-content-center py-1 mb-2 border-bottom" id="header">
 
 
-            <a class="logo d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" href="ZAS-News">
+            <a class="logo d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" href="ZAS-News.html">
             <img src="pics/image2.png" title="Go Home" class="fade-in logo " alt="logo" id="logo" width="96">
 
 
             <ul class="nav nav-pills" >
-                <li class="fade-in nav-item" title="Current | Home"><a class="link active nav-link" aria-current="page" href="ZAS-News">Home
+                <li class="fade-in nav-item" title="Current | Home"><a class="link active nav-link" aria-current="page" href="ZAS-News.html">Home
                 </a>
                 </li>
  
-                <li class="fade-in nav-item" title="Learn more About us" ><a  class="link nav-link" href="About">About Us
+                <li class="fade-in nav-item" title="Learn more About us" ><a  class="link nav-link" href="About.html">About Us
                 </a>  
                 </li>
-                <li class="fade-in nav-item" title="Discover The latest Headlines And Stories" ><a class="link nav-link"  href="Discover">Discover
+                <li class="fade-in nav-item" title="Discover The latest Headlines And Stories" ><a class="link nav-link"  href="Discover.html">Discover
                 </a>
                 </li>
             </ul>
@@ -151,9 +151,9 @@
         </main>                
         <footer>
             <ul class="position-fix nav nav-pills alsonavpills" >
-                <li class="fade-in nav-item" title="Current | Home" ><a class="link active nav-link" aria-current="page" href="ZAS-News">Home</a></li>
-                <li class="fade-in nav-item" title="Learn more About us" ><a class="link nav-link" href="About">About Us</a></li>
-                <li class="fade-in nav-item" title="Discover The latest Headlines And Stories" ><a class="link nav-link"  href="Discover">Discover</a></li>
+                <li class="fade-in nav-item" title="Current | Home" ><a class="link active nav-link" aria-current="page" href="ZAS-News.html">Home</a></li>
+                <li class="fade-in nav-item" title="Learn more About us" ><a class="link nav-link" href="About.html">About Us</a></li>
+                <li class="fade-in nav-item" title="Discover The latest Headlines And Stories" ><a class="link nav-link" href="Discover.html">Discover</a></li>
             </ul>
             <br>
             
