--- a/article.html
+++ b/article.html
@@ -29,7 +29,7 @@
 
 
 
-            <a class="logo d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" href="ZAS-News">
+            <a class="logo d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" href="ZAS-News.html" title="Go Home">
             <img src="pics/image2.png" title="Go Home" class="fade-in logo " alt="logo" id="logo" width="96"></a>
 
 
@@ -38,10 +38,10 @@
 
             <ul class="nav nav-pills" >
 
-                <li class="fade-in nav-item" title="Home"><a class="link nav-link"  href="ZAS-News">Home</a></li>
+                <li class="fade-in nav-item" title="Home"><a class="link nav-link"  href="ZAS-News.html">Home</a></li>
 
-                <li class="fade-in nav-item" title="Learn more About us" ><a  class="link nav-link" aria-current="page" href="About">About Us</a></li>
-                <li class="fade-in nav-item" title="Current | Discover" ><a class="link active nav-link"  id="activenav" aria-current="page" href="Discover">Discover</a></li>
+                <li class="fade-in nav-item" title="Learn more About us" ><a  class="link nav-link" aria-current="page" href="About.html">About Us</a></li>
+                <li class="fade-in nav-item" title="Current | Discover" ><a class="link active nav-link"  id="activenav" aria-current="page" href="Discover.html">Discover</a></li>
             </ul>
 
         </header>
@@ -58,12 +58,12 @@
 
     <footer>
                 <ul class="nav nav-pills" >
-                <li class="fade-in nav-item" title="Home"><a class="link nav-link"  href="ZAS-News">Home</a>
+                <li class="fade-in nav-item" title="Home"><a class="link nav-link"  href="ZAS-News.html">Home</a>
                 </li>
 
-                <li class="fade-in nav-item" title="Learn more About us" ><a  class="link nav-link" aria-current="page" href="About">About Us</a></li>
+                <li class="fade-in nav-item" title="Learn more About us" ><a  class="link nav-link" aria-current="page" href="About.html">About Us</a></li>
 
-                <li class="fade-in nav-item" title="Current | Discover" ><a class="link active nav-link"  id="activenav" aria-current="page" href="Discover">Discover</a></li>
+                <li class="fade-in nav-item" title="Current | Discover" ><a class="link active nav-link"  id="activenav" aria-current="page" href="Discover.html">Discover</a></li>
             </ul>
             <br>
   <h2>  Visit us on our social Media | <a class=link href="https://linktr.ee/zeyadsukk">Click now!</a></h2>
