--- a/Discover.html
+++ b/Discover.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,13 +21,13 @@
 <button class="fade-in scrolltop" onclick="scrollToTop()" id="scrollBtn" title="Go to top"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--main)"><path d="M160-760v-80h640v80H160Zm280 640v-408L336-424l-56-56 200-200 200 200-56 56-104-104v408h-80Z"/></svg></button>
 
 <header class="dheader d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom" id="header">
-    <a class="logo d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" href="ZAS-News">
+    <a class="logo d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" href="ZAS-News.html">
         <img src="pics/image2.png" title="Go Home" class="fade-in logo" alt="logo" id="logo" width="96">
     </a>
     <ul class="nav nav-pills">
-        <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News">Home</a></li>
-        <li class="fade-in nav-item" title="Learn more About us"><a class="link nav-link" href="About">About Us</a></li>
-        <li class="fade-in nav-item" title="Current | Discover"><a class="link active nav-link" id="activenav" aria-current="page" href="Discover">Discover</a></li>
+        <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News.html">Home</a></li>
+        <li class="fade-in nav-item" title="Learn more About us"><a class="link nav-link" href="About.html">About Us</a></li>
+        <li class="fade-in nav-item" title="Current | Discover"><a class="link active nav-link" id="activenav" aria-current="page" href="Discover.html">Discover</a></li>
     </ul>
 </header>
 
@@ -65,14 +62,14 @@
 
 <footer>
     <ul class="position-fix nav nav-pills alsonavpills">
-        <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News">Home</a></li>
-        <li class="fade-in nav-item" title="Learn more About us"><a class="link nav-link" href="About">About Us</a></li>
-        <li class="fade-in nav-item" title="Current | Discover"><a class="link active nav-link" id="activenav" aria-current="page" href="Discover">Discover</a></li>
+        <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News.html">Home</a></li>
+        <li class="fade-in nav-item" title="Learn more About us"><a class="link nav-link" href="About.html">About Us</a></li>
+        <li class="fade-in nav-item" title="Current | Discover"><a class="link active nav-link" id="activenav" aria-current="page" href="Discover.html">Discover</a></li>
     </ul>
     <br>
     <h3 class="fade-in">Visit us on our social Media | <a class="fade-in link" href="https://linktr.ee/zeyadsukk">Click now!</a></h3>
     <br>
-    <h3>&copy; All Rights Reserved. Zeyad - 2024</h3>
+    <h3>&copy; All Rights Reserved. Zeyad - 2025</h3>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
