--- a/article.html
+++ b/article.html
@@ -10,6 +10,11 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" >
 
         <link rel="stylesheet" href="style.css">
+        <style>  .news-item img {
+    max-width: 60%; !important;
+    height: auto;
+    margin-bottom: 15px;
+  }</style>
 </head>
 <body>
 
