--- a/Discover.html
+++ b/Discover.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-
+  
 <button class="loading" id="loading">Loading...</button>  
 
 <button id="theme-switch" title="Switch" class="theme-switch slide-in-left">            
@@ -33,30 +33,16 @@
 
 <main>
 
-<section class="newsletter news-item-w-dropdown row">
-  <div class="col-md-9">
-    <h2 class="fade-in">Join The Z A S Newsletter</h2>
-    <p>Stay informed with the latest news and insights.</p>
-    <form action="https://shattereddisk.github.io/rickroll/rickroll.mp4">
-      <input class="email fade-in" type="email" name="email" placeholder="Enter your email">
-      <button class="submit-button fade-in" onclick="redirectToVideoPage()">
-        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--main)">
-          <path d="M120-160v-240l320-80-320-80v-240l760 320-760 320Z"/>
-        </svg>
-      </button>
-    </form>
-
-</section>
-
 
     <section class="Latest-news">
 
 
-<div class="d-flex justify-content-between align-items-center flex-wrap gap-2 mb-3">
+<div class="d-flex justify-content-between align-items-center gap-2 mb-3 flex-nowrap">
   <h1 class="fade-in mb-0 flex-grow-1">Latest News</h1>
 
   <!-- Filter by Author -->
-  <select id="authorFilter" class="form-select w-auto" multiple>
+  <select id="authorFilter" class="form-select w-auto">
+    <option value="none" selected>None</option>
     <option value="author-chatgpt">ChatGPT</option>
     <option value="author-gemini">Gemini</option>
     <option value="author-zeyad">Zeyad</option>
@@ -64,25 +50,28 @@
   </select>
 
   <!-- Filter by Category -->
-  <select id="categoryFilter" class="form-select w-auto" multiple>
+  <select id="categoryFilter" class="form-select w-auto">
+    <option value="none" selected>None</option>
     <option value="category-tech">Tech</option>
     <option value="category-science">Science</option>
     <option value="category-lifestyle">Lifestyle</option>
     <option value="category-family">Family</option>
   </select>
 
-<div>
-  <select id="sortOptions" class="form-select w-auto">
-    <option value="date" selected>Sort by Date</option>
-    <option value="trending">Filter by Trending</option>
-    <option value="title">Sort by Title</option>
-    <option value="author">Sort by Author</option>
-    <option value="category">Sort by Category</option>
-  </select>
-  <button id="clearFiltersBtn" class="clear-btn btn-outline-secondary">Clear Filters</button>
+  <div class="d-flex align-items-center gap-2">
+    <!-- Sort Options -->
+    <select id="sortOptions" class="form-select w-auto">
+      <option value="date" selected>Sort by Date</option>
+      <option value="trending">Filter by Trending</option>
+      <option value="title">Sort by Title</option>
+      <option value="author">Sort by Author</option>
+      <option value="category">Sort by Category</option>
+    </select>
 
   </div>
 </div>
+
+
 
 
 
@@ -105,7 +94,7 @@
 </main>
 
 <footer>
-    <ul class="position-fix nav nav-pills alsonavpills">
+    <ul class="position-fix nav nav-pills">
         <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News.html">Home</a></li>
         <li class="fade-in nav-item" title="Learn more About us"><a class="link nav-link" href="About.html">About Us</a></li>
         <li class="fade-in nav-item" title="Current | Discover"><a class="link active nav-link" id="activenav" aria-current="page" href="Discover.html">Discover</a></li>
