sortin and filtering fixed and updated

--- a/Discover.html
+++ b/Discover.html
@@ -41,22 +41,13 @@
   <h1 class="fade-in mb-0 flex-grow-1">Latest News</h1>
 
   <!-- Filter by Author -->
-  <select id="authorFilter" class="form-select w-auto">
-    <option value="none" selected>None</option>
-    <option value="author-chatgpt">ChatGPT</option>
-    <option value="author-gemini">Gemini</option>
-    <option value="author-zeyad">Zeyad</option>
-    <option value="author-unknown">Unknown</option>
-  </select>
+<select id="authorFilter" class="form-select w-auto">
 
-  <!-- Filter by Category -->
-  <select id="categoryFilter" class="form-select w-auto">
-    <option value="none" selected>None</option>
-    <option value="category-tech">Tech</option>
-    <option value="category-science">Science</option>
-    <option value="category-lifestyle">Lifestyle</option>
-    <option value="category-family">Family</option>
-  </select>
+</select>
+<select id="categoryFilter" class="form-select w-auto">
+
+</select>
+
 
   <div class="d-flex align-items-center gap-2">
     <!-- Sort Options -->
@@ -87,6 +78,7 @@
     <p id="noArticlesMsg" class="text-center my-4 nonedisplay" >No articles found based on the current parameters.</p>
 
   </div>
+<div id="noArticlesMsg" class="nonedisplay">No articles found.</div>
 
   
   </div>
