--- a/About.html
+++ b/About.html
@@ -24,58 +24,63 @@
 
 
 
- <header class="dheader d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom" id="header">
-  
+<header class="py-3 mb-4 border-bottom">
+    <div class="container d-flex flex-wrap justify-content-center align-items-center">
+    <a class="logo d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none" href="ZAS-News.html">
+<img src="pics/logo.svg" class="logo slide-in-left" alt="Logo">
 
+    </a>
+ <ul class="nav nav-pills justify-content-center  col-12 col-lg-auto mb-3 mb-lg-0">
+        <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News.html">Home</a></li>
 
-     
-        <a class="logo d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" href="ZAS-News">
-                <img src="pics/image2.png" title="Go Home" class="fade-in logo idkwhereislogoclass" alt="logo" id="logo" width="96">
-                
-            <ul class="nav nav-pills" >
+   <li class="fade-in nav-item" title="About"><a class="link active nav-link" id="activenav" aria-current="page" href="About.html">About us</a></li>
 
-                <li class="fade-in nav-item" title="Home" ><a class="link nav-link" 
-                 href="ZAS-News">Home</a></li>
-
-                <li class="fade-in nav-item" title="Current | About" ><a class="link active nav-link" id="activenav" aria-current="page"  href="About">About Us</a></li>
-                <li class="fade-in nav-item" title="Discover The latest Headlines And Stories" ><a class="link nav-link"  href="Discover">Discover</a></li>
-            </ul>
-
-    </header>
+        <li class="fade-in  nav-item" title="Discover"><a class="link nav-link"  href="Discover.html">Discover</a></li>
+    </ul>
+    </div>
+  </header>
 
     <main>
 
-<Article><h2>what we do</h2>
-<p>we're a small company with a goal to bring you all the latest news and send it right to your email if you prefer so 
-<p>
-<h2>how we work<h2>
-<p>we work as a team of professionals, and every part of our team is passionate about their work.
-<br><br>
-<h5>Developer: Zeyad Ahmed El-Sukkary<br></h5>
-<p>Stylists:Zeyad<br></p>
-<h5>Writers: Gemini, Zeyad<br></h5>
-<p>JavaScript Developers: Chatgpt, Zeyad<br></p>
-<h5>Auditor: Zeyad Ahmed El-Sukkary</h5>
-</Article>
+<div class="px-4 pt-5 my-5 text-center border-bottom">
+  <h1 class="display-4 fw-bold">About Z-A-S</h1>
+  <div class="col-lg-6 mx-auto">
+    <p class="lead mb-4">
+      Z-A-S is the personal project of Zeyad Ahmed El-Sukkary, a passionate 15-year-old web developer and aspiring software engineer. Built from scratch with HTML, CSS, and JavaScript, this site showcases Zeyad’s growing skills in responsive design, UI/UX, and dynamic content filtering. Beyond coding, Zeyad is driven by a dream to study at Stanford and one day serve in a top federal agency. This website is a testament to his ambition and love for technology.
+    </p>
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+      <a href="/discover.html" class="btn btn-primary btn-lg px-4 me-sm-3">Explore Articles</a>
+      <a href="https://linktr.ee/zeyadsukk" target="_blank" class="btn btn-outline-success btn-lg px-4">Linktree</a>
+    </div>
+  </div>
+  <div class="overflow-hidden" style="max-height: 30vh;">
+    <div class="container px-5">
+      <img src="pics/about-img.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="About Zeyad" width="700" height="500" loading="lazy">
+    </div>
+  </div>
+</div>
 
-<footer>
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+  <p class="col-md-4 mb-0 maintext">&copy; 2025 Zeyad - All Rights Reserved</p>
 
-            <ul class="nav nav-pills" >
+  <a href="ZAS-News.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-decoration-none">
+    <img src="pics/logo.svg" class="logo slide-in-left" alt="Logo" width="40" height="40">
+  </a>
+ 
+  <ul class="nav col-md-4 justify-content-end">
+    <li class="nav-item"><a href="ZAS-News.html" class="nav-link px-2 secondarytext">Home</a></li>
+    <li class="nav-item"><a href="Discover.html" class="nav-link px-2 secondarytext">Discover</a></li>
+    <li class="nav-item"><a href="About.html" class="nav-link secondarytext px-2 ">About</a></li>
+    <li class="nav-item fade-in"><button id="resetStorage" class="btn btn-outline-danger btn-sm px-2">Reset Data</button></li>
+    <li class="nav-item fade-in"><a href="https://linktr.ee/zeyadsukk" target="_blank" class="btn btn-success btn-sm ms-2">Linktree</a></li>
+  </ul>
+</footer>
 
-                <li class="fade-in nav-item" title="Home" ><a class="link nav-link" 
-                 href="ZAS-News">Home</a></li>
+<div class="text-center small secondarytext pb-3">
+  <h6 class="mb-1">DISCLAIMER:</h6>
+  <p class="mb-0">All dates and information may not be factually accurate. Proceed with caution.</p>
+</div>
 
-                <li class="fade-in nav-item" title="Current | About" ><a class="link active nav-link" id="activenav" aria-current="page"  href="About">About Us</a></li>
-                <li class="fade-in nav-item" title="Discover The latest Headlines And Stories" ><a class="link nav-link"  href="Discover">Discover</a></li>
-            </ul>
-    <br>
-
-<h2>  Visit us on our social Media | <a class=link href="https://linktr.ee/zeyadsukk">Click now!</a><h2>
-
-
-      <h3>DISCLAIMER:</h3>  <h5>All dates and all info may not be factually acurate, proceed with caution</h5>
-       <br><h3>&copy All Rights Reserved. Zeyad - 2024</h3>     <button class="button" id="resetStorage">Reset Data?</button>
-        </footer>
     </main>
 
            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
