--- a/Discover.html
+++ b/Discover.html
@@ -19,18 +19,26 @@
 </button>
 
 <button class="fade-in scrolltop" onclick="scrollToTop()" id="scrollBtn" title="Go to top"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--main)"><path d="M160-760v-80h640v80H160Zm280 640v-408L336-424l-56-56 200-200 200 200-56 56-104-104v408h-80Z"/></svg></button>
-
-<header class="dheader d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom" id="header">
-    <a class="logo d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" href="ZAS-News.html">
-        <img src="pics/image2.png" title="Go Home" class="fade-in logo" alt="logo" id="logo" width="96">
-    </a>
-    <ul class="nav nav-pills">
+<nav class="py-2 border-bottom">
+    <div class="d-flex justify-content-center py-3">
+ <ul class="nav nav-pills col-md-4 justify-content-center">
         <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News.html">Home</a></li>
         <li class="fade-in nav-item" title="Learn more About us"><a class="link nav-link" href="About.html">About Us</a></li>
         <li class="fade-in nav-item" title="Current | Discover"><a class="link active nav-link" id="activenav" aria-current="page" href="Discover.html">Discover</a></li>
     </ul>
-</header>
+    </div>
+  </nav>
+<header class="py-3 mb-4 border-bottom">
+    <div class="container d-flex flex-wrap justify-content-center align-items-center">
+    <a class="logo d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none" href="ZAS-News.html">
+<img src="pics/logo.svg" class="logo slide-in-left" alt="Logo">
 
+    </a>
+      <form class="justify-content-center  col-12 col-lg-auto mb-3 mb-lg-0" role="search">
+        <input type="search" class="form-control" placeholder="Search..." id="searchbar" aria-label="Search">
+      </form>
+    </div>
+  </header>
 <main>
 
 
@@ -85,19 +93,24 @@
     </section>
 </main>
 
-<footer>
-    <ul class="position-fix nav nav-pills">
-        <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News.html">Home</a></li>
-        <li class="fade-in nav-item" title="Learn more About us"><a class="link nav-link" href="About.html">About Us</a></li>
-        <li class="fade-in nav-item" title="Current | Discover"><a class="link active nav-link" id="activenav" aria-current="page" href="Discover.html">Discover</a></li>
-    </ul>
-    <br>
-    <h3 class="fade-in">Visit us on our social Media | <a class="fade-in link" href="https://linktr.ee/zeyadsukk">Click now!</a></h3>
-    <br>
-    <h3>&copy; All Rights Reserved. Zeyad - 2025</h3>
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+  <p class="col-md-4 mb-0 maintext">&copy; 2025 Zeyad - All Rights Reserved</p>
+
+  <a href="ZAS-News.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-decoration-none">
+    <img src="pics/logo.svg" class="logo slide-in-left" alt="Logo" width="40" height="40">
+  </a>
+
+  <ul class="nav col-md-4 justify-content-end">
+    <li class="nav-item"><a href="ZAS-News.html" class="nav-link px-2 secondarytext">Home</a></li>
+    <li class="nav-item"><a href="Discover.html" class="nav-link px-2 secondarytext">Discover</a></li>
+    <li class="nav-item"><a href="About.html" class="nav-link secondarytext px-2 ">About us</a></li>
+    <li class="nav-item fade-in"><button id="resetStorage" class="btn btn-outline-danger btn-sm px-2">Reset Data</button></li>
+    <li class="nav-item fade-in"><a href="https://linktr.ee/zeyadsukk" target="_blank" class="btn btn-success btn-sm ms-2">Linktree</a></li>
+  </ul>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
 <script src="scripts/darkmode.js"></script>
 <script type="text/javascript" src="scripts/script.js"></script>
 
