--- a/ZAS-News.html
+++ b/ZAS-News.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Home | Z-A-S</title>
-
+<!-- Option 1: Include in HTML -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" crossorigin="anonymous" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" >
@@ -29,54 +30,48 @@
 
 
     <div class="loading2" class="loading2 modal modal-sheet position-static d-block bg-body-secondary p-4 py-md-5" tabindex="-1" role="dialog" id="modalTour">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content rounded-4 shadow">
-          <div class="modal-body p-5">
-          <h2 class="fw-bold mb-0">What's new?</h2>
+    <div class="modal-dialog" role="document">
+  <div class="modal-content rounded-4 shadow">
+    <div class="modal-body p-5">
+      <h2 class="fw-bold mb-0">What's new?</h2>
 
-            <ul class="d-grid gap-4 my-5 list-unstyled small">
+      <ul class="d-grid gap-4 my-5 list-unstyled small">
 
-              <li class="d-flex gap-4">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63" fill="currentColor" class="bi bi-moon-stars" viewBox="0 0 16 16">
-                      <path d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278M4.858 1.311A7.27 7.27 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.32 7.32 0 0 0 5.205-2.162q-.506.063-1.029.063c-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286"/>
-                      <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.73 1.73 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.73 1.73 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.73 1.73 0 0 0 1.097-1.097zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.16 1.16 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.16 1.16 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732z"/>
-                  </svg>
-                <div>
-                  <h5 class="mb-0">Reworked Dark Mode</h5>
-                  Experience a more refined and visually appealing dark mode.
-                </div>
-              </li>
-
-              <li class="d-flex gap-4">
-               <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-stars" viewBox="0 0 16 16">
-                   <path d="M7.657 6.247c.11-.33.576-.33.686 0l.645 1.937a2.89 2.89 0 0 0 1.829 1.828l1.936.645c.33.11.33.576 0 .686l-1.937.645a2.89 2.89 0 0 0-1.828 1.829l-.645 1.936a.361.361 0 0 1-.686 0l-.645-1.937a2.89 2.89 0 0 0-1.828-1.828l-1.937-.645a.361.361 0 0 1 0-.686l1.937-.645a2.89 2.89 0 0 0 1.828-1.828zM3.794 1.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387A1.73 1.73 0 0 0 4.593 5.69l-.387 1.162a.217.217 0 0 1-.412 0L3.407 5.69A1.73 1.73 0 0 0 2.31 4.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387A1.73 1.73 0 0 0 3.407 2.31zM10.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.16 1.16 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.16 1.16 0 0 0-.732-.732L9.1 2.137a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732z"/>
-                </svg>
-               <div>
-                  <h5 class="mb-0">Lighter Website</h5>
-                  Enjoy a faster and more efficient browsing experience.
-               </div>
-              </li>
-
-              <li class="d-flex gap-4">
-              <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" fill="currentColor" class="bi bi-compass" viewBox="0 0 16 16">
-              <path d="M8 16.016a7.5 7.5 0 0 0 1.962-14.74A1 1 0 0 0 9 0H7a1 1 0 0 0-.962 1.276A7.5 7.5 0 0 0 8 16.016m6.5-7.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0"/>
-              <path d="m6.94 7.44 4.95-2.83-2.83 4.95-4.949 2.83 2.828-4.95z"/>
-              </svg>
-              <div>
-              <h5 class="mb-0">Easier Navigation</h5>
-              Navigate through the website with improved ease and accessibility.
-              </div>
-              </li>
-
-            </ul>
-            
-            <h6>Press H to Dismiss</h6>
-            <span id="modaldismiss" class="close">  <button type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Cool, thanks!</button>
-            </span>
+        <li class="d-flex gap-4">
+          <i class="bi bi-search display-5 text-primary"></i>
+          <div>
+            <h5 class="mb-0">Revamped Discover Page</h5>
+            Discover content faster with a new search bar, sorting dropdown, and category/author filters.
           </div>
-        </div>
-      </div>
+        </li>
+
+        <li class="d-flex gap-4">
+          <i class="bi bi-layers display-5 text-success"></i>
+          <div>
+            <h5 class="mb-0">Modern Redesign</h5>
+            A fresh new look with a reworked header, footer, cleaner article layout, and sidebar support.
+          </div>
+        </li>
+
+        <li class="d-flex gap-4">
+          <i class="bi bi-funnel display-5 text-warning"></i>
+          <div>
+            <h5 class="mb-0">Multi-Filter System</h5>
+            Easily filter articles by category or author using dropdowns — great for focused browsing.
+          </div>
+        </li>
+
+      </ul>
+
+      <h6>Press H to Dismiss</h6>
+      <span id="modaldismiss" class="close">
+        <button type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Cool, thanks!</button>
+      </span>
     </div>
+  </div>
+</div>
+</div>
+
 
       <button id="theme-switch" title="Press T to Toggle" class="theme-switch slide-in-left">            
             <svg xmlns="http://www.w3.org/2000/svg" alt="modeswitch" title="Switch to Dark" height="50px" viewBox="0 -960 960 960" width="50px" fill="var(--fillcolor)">
@@ -94,37 +89,24 @@
             </svg>
       </button>
 
-      <header class="dheader d-flex flex-wrap justify-content-center py-1 mb-2 border-bottom" id="header">
 
+<header class="py-3 mb-4 border-bottom">
+    <div class="container d-flex flex-wrap justify-content-center align-items-center">
+    <a class="logo d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none" href="ZAS-News.html">
+<img src="pics/logo.svg" class="logo slide-in-left" alt="Logo">
 
-        <a class="logo d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" href="ZAS-News.html">
-        <img src="pics/image2.png" title="Go Home" class="fade-in logo " alt="logo" id="logo" width="96">
-
-
-        <ul class="nav nav-pills" >
-
-          <li class="fade-in nav-item" title="Current | Home">
-            <a class="link active nav-link" aria-current="page" href="ZAS-News.html">Home
-            </a>
-          </li>
-
-          <li class="fade-in nav-item" title="Learn more About us" >
-            <a  class="link nav-link" href="About.html">About Us
-            </a>  
-          </li>
-
-          <li class="fade-in nav-item" title="Discover The latest Headlines And Stories" >
-            <a class="link nav-link"  href="Discover.html">Discover
-            </a>
-          </li>
-
-        </ul>
-
-      </header> 
+    </a>
+ <ul class="nav nav-pills justify-content-center  col-12 col-lg-auto mb-3 mb-lg-0">
+        <li class="fade-in nav-item" title="Home"><a class="link active nav-link" id="activenav" aria-current="page" href="ZAS-News.html">Home</a></li>
+        <li class="fade-in nav-item" title="Learn more About us"><a class="link nav-link" href="About.html">About Us</a></li>
+        <li class="fade-in nav-item" title="Current | Discover"><a class="link nav-link"  href="Discover.html">Discover</a></li>
+    </ul>
+    </div>
+  </header>
 
 
       <main>
-        <div class="slide-in-left nonedisplay alert fade-in parent">
+        <div class="slide-in-left nonedisplay maintext alert fade-in parent">
           <span class="closebtn fade-in child" onclick="this
 
           .parentElement.style.display='none';">
@@ -144,9 +126,9 @@
         <section class="featured-news">
           <h2 class=fade-in>Featured News</h2>
 
-          <div class="slide-in-left alert">
+          <div class="slide-in-left maintext alert">
           <span class="fade-in closebtn" onclick="closeAlert(this)">&times;</span>
-
+ 
             Info on this website may not be factually accurate,
 
             Procceed with <strong  style="color: red">Caution</strong>.
@@ -157,39 +139,26 @@
           </div>     
 
         </section>
-      </main>                
-      <footer>
-        <ul class="position-fix nav nav-pills" >
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <a href="Discover.html" class="btn btn-outline-info" role="button">Discover More Articles</a>
+</div>
+      </main>  
 
-          <li class="fade-in nav-item" title="Current | Home" >
-             <a class="link active nav-link" aria-current="page" href="ZAS-News.html">Home</a>
-          </li>
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+  <p class="col-md-4 mb-0 maintext">&copy; 2025 Zeyad - All Rights Reserved</p>
 
-          <li class="fade-in nav-item" title="Learn more About us" >
-             <a class="link nav-link" href="About.html">About Us</a>
-          </li>
+  <a href="ZAS-News.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-decoration-none">
+    <img src="pics/logo.svg" class="logo slide-in-left" alt="Logo" width="40" height="40">
+  </a>
 
-          <li class="fade-in nav-item" title="Discover The latest Headlines And Stories" >
-             <a class="link nav-link" href="Discover.html">Discover</a>
-          </li>
-
-        </ul>
-      <br>
-
-
-          <h3 class=fade-in>  
-        Visit us on our social Media | 
-            <a class="fade-in link" href="https://linktr.ee/zeyadsukk">Click now!</a>
-          </h3>
-
-
-
-      <br>
-
-          <h3>
-            &copy All Rights Reserved. Zeyad - 2024
-          </h3> 
-    </footer>
+  <ul class="nav col-md-4 justify-content-end">
+    <li class="nav-item"><a href="ZAS-News.html" class="nav-link px-2 secondarytext">Home</a></li>
+    <li class="nav-item"><a href="Discover.html" class="nav-link px-2 secondarytext">Discover</a></li>
+    <li class="nav-item"><a href="About.html" class="nav-link secondarytext px-2 ">About us</a></li>
+    <li class="nav-item fade-in"><button id="resetStorage" class="btn btn-outline-danger btn-sm px-2">Reset Data</button></li>
+    <li class="nav-item fade-in"><a href="https://linktr.ee/zeyadsukk" target="_blank" class="btn btn-success btn-sm ms-2">Linktree</a></li>
+  </ul>
+</footer>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
