--- a/article.html
+++ b/article.html
@@ -38,17 +38,25 @@
     </svg>
 </button>
 
-<header class="dheader d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom" id="header">
-    <a class="logo d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" href="ZAS-News.html" title="Go Home">
-        <img src="pics/image2.png" title="Go Home" class="fade-in logo " alt="logo" id="logo" width="96">
-    </a>
-
-    <ul class="nav nav-pills">
-        <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News.html">Home</a></li>
-        <li class="fade-in nav-item" title="Learn more About us" ><a class="link nav-link" aria-current="page" href="About.html">About Us</a></li>
-        <li class="fade-in nav-item" title="Current | Discover" ><a class="link active nav-link" id="activenav" aria-current="page" href="Discover.html">Discover</a></li>
-    </ul>
+<header class="py-3 mb-4 border-bottom">
+    <div class="container d-flex flex-wrap justify-content-center align-items-center">
+        <a class="logo d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none" href="ZAS-News.html">
+            <img src="pics/logo.svg" class="logo slide-in-left" alt="Logo">
+        </a>
+        <ul class="nav nav-pills justify-content-center col-12 col-lg-auto mb-3 mb-lg-0">
+            <li class="fade-in nav-item" title="Home">
+                <a class="link nav-link" href="ZAS-News.html">Home</a>
+            </li>
+            <li class="fade-in nav-item" title="Learn more About us">
+                <a class="link nav-link" href="About.html">About Us</a>
+            </li>
+            <li class="fade-in nav-item" title="Current | Discover">
+                <a class="link active nav-link" href="Discover.html" aria-current="page">Discover</a>
+            </li>
+        </ul>
+    </div>
 </header>
+
 
 <main>
     <section class="d-flex justify-content-center mb-4 row" id="main-section">
@@ -72,17 +80,21 @@
 
 </main>
 
-<footer>
-    <ul class="nav nav-pills">
-        <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News.html">Home</a></li>
-        <li class="fade-in nav-item" title="Learn more About us" ><a class="link nav-link" aria-current="page" href="About.html">About Us</a></li>
-        <li class="fade-in nav-item" title="Current | Discover" ><a class="link active nav-link" id="activenav" aria-current="page" href="Discover.html">Discover</a></li>
-    </ul>
-    <br>
-    <h2>Visit us on our social Media | <a class="link" href="https://linktr.ee/zeyadsukk">Click now!</a></h2>
-    <br><h3>&copy All Rights Reserved. Zeyad - 2025</h3> 
-</footer>
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+  <p class="col-md-4 mb-0 maintext">&copy; 2025 Zeyad - All Rights Reserved</p>
 
+  <a href="ZAS-News.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-decoration-none">
+    <img src="pics/logo.svg" class="logo slide-in-left" alt="Logo" width="40" height="40">
+  </a>
+
+  <ul class="nav col-md-4 justify-content-end">
+    <li class="nav-item"><a href="ZAS-News.html" class="nav-link px-2 secondarytext">Home</a></li>
+    <li class="nav-item"><a href="Discover.html" class="nav-link px-2 secondarytext">Discover</a></li>
+    <li class="nav-item"><a href="About.html" class="nav-link secondarytext px-2 ">About us</a></li>
+    <li class="nav-item fade-in"><button id="resetStorage" class="btn btn-outline-danger btn-sm px-2">Reset Data</button></li>
+    <li class="nav-item fade-in"><a href="https://linktr.ee/zeyadsukk" target="_blank" class="btn btn-success btn-sm ms-2">Linktree</a></li>
+  </ul>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script type="text/javascript" src="scripts/articlescript.js"></script>
 <script src="scripts/darkmode.js"></script>
