--- a/About.html
+++ b/About.html
@@ -27,7 +27,7 @@
 <header class="py-3 mb-4 border-bottom">
     <div class="container d-flex flex-wrap justify-content-center align-items-center">
     <a class="logo d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none" href="ZAS-News.html">
-<img src="pics/logo.svg" class="logo slide-in-left" alt="Logo">
+<img src="pics/Logo.svg" class="logo slide-in-left" alt="Logo">
 
     </a>
  <ul class="nav nav-pills justify-content-center  col-12 col-lg-auto mb-3 mb-lg-0">
@@ -55,7 +55,7 @@
   </div>
   <div class="overflow-hidden" style="max-height: 30vh;">
     <div class="container px-5">
-      <img src="pics/about-img.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="About Zeyad" width="700" height="500" loading="lazy">
+      <img src="pics/About-img.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="About Zeyad" width="700" height="500" loading="lazy">
     </div>
   </div>
 </div>
@@ -64,7 +64,7 @@
   <p class="col-md-4 mb-0 maintext">&copy; 2025 Zeyad - All Rights Reserved</p>
 
   <a href="ZAS-News.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-decoration-none">
-    <img src="pics/logo.svg" class="logo slide-in-left" alt="Logo" width="40" height="40">
+    <img src="pics/Logo.svg" class="logo slide-in-left" alt="Logo" width="40" height="40">
   </a>
  
   <ul class="nav col-md-4 justify-content-end">
