--- a/ZAS-News.html
+++ b/ZAS-News.html
@@ -124,7 +124,7 @@
 
 
         <section class="featured-news">
-          <h2 class=fade-in>Featured News</h2>
+          <h2 class=fade-in><b>Featured News</b></h2>
 
           <div class="slide-in-left maintext alert">
           <span class="fade-in closebtn" onclick="closeAlert(this)">&times;</span>
