--- a/About.html
+++ b/About.html
@@ -46,10 +46,10 @@
   <h1 class="display-4 fw-bold">About Z-A-S</h1>
   <div class="col-lg-6 mx-auto">
     <p class="lead mb-4">
-      Z-A-S is the personal project of Zeyad Ahmed El-Sukkary, a passionate 15-year-old web developer and aspiring software engineer. Built from scratch with HTML, CSS, and JavaScript, this site showcases Zeyad’s growing skills in responsive design, UI/UX, and dynamic content filtering. Beyond coding, Zeyad is driven by a dream to study at Stanford and one day serve in a top federal agency. This website is a testament to his ambition and love for technology.
+      Z-A-S is the personal project of Zeyad Ahmed El-Sukkary, a passionate 15-year-old web developer and aspiring software engineer. Built from scratch with HTML, CSS, and JavaScript, this site showcases Zeyad’s growing skills in responsive design, UI/UX, and dynamic content filtering. Beyond coding, Zeyad is driven by a dream to study at Stanford and one day Start his own Company. This website is a testament to his ambition and love for technology.
     </p>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-      <a href="/discover.html" class="btn btn-primary btn-lg px-4 me-sm-3">Explore Articles</a>
+      <a href="Discover.html" class="btn btn-primary btn-lg px-4 me-sm-3">Explore Articles</a>
       <a href="https://linktr.ee/zeyadsukk" target="_blank" class="btn btn-outline-success btn-lg px-4">Linktree</a>
     </div>
   </div>
