--- a/Discover.html
+++ b/Discover.html
@@ -46,20 +46,18 @@
 
 
 <div class="d-flex justify-content-between align-items-center gap-2 mb-3 flex-nowrap">
-  <h1 class="fade-in mb-0 flex-grow-1">Latest News</h1>
+  <h1 class="fade-in mb-0 flex-grow-1 col-md-4">Latest News</h1>
 
   <!-- Filter by Author -->
-<select id="authorFilter" class="form-select w-auto">
+<select id="authorFilter" class="form-select col-md-2">
 
 </select>
-<select id="categoryFilter" class="form-select w-auto">
+<select id="categoryFilter" class="form-select col-md-2">
 
 </select>
-
-
-  <div class="d-flex align-items-center gap-2">
+  
     <!-- Sort Options -->
-    <select id="sortOptions" class="form-select w-auto">
+    <select id="sortOptions" class="form-select w-auto col-md-4">
       <option value="date" selected>Sort by Date</option>
       <option value="trending">Filter by Trending</option>
       <option value="title">Sort by Title</option>
@@ -67,7 +65,7 @@
       <option value="category">Sort by Category</option>
     </select>
 
-  </div>
+  
 </div>
 
 
