--- a/Discover.html
+++ b/Discover.html
@@ -45,7 +45,7 @@
     <section class="Latest-news">
 
 
-<div class="d-flex justify-content-between align-items-center gap-2 mb-3 flex-nowrap">
+<div class="d-flex justify-content-between align-items-center gap-2 mb-3 flex-nowrap row">
   <h1 class="fade-in mb-0 flex-grow-1 col-md-4">Latest News</h1>
 
   <!-- Filter by Author -->
