--- a/Discover.html
+++ b/Discover.html
@@ -45,19 +45,19 @@
     <section class="Latest-news">
 
 
-<div class="d-flex justify-content-between align-items-center gap-2 mb-3 flex-nowrap row">
-  <h1 class="fade-in mb-0 flex-grow-1 col-md-4">Latest News</h1>
+<div class="d-flex justify-content-between align-items-center gap-2 mb-3">
+  <h1 class="fade-in mb-0 flex-grow-1 col-md-3">Latest News</h1>
 
   <!-- Filter by Author -->
-<select id="authorFilter" class="form-select col-md-2">
+<select id="authorFilter" class="form-select w-auto col-md-2">
 
 </select>
-<select id="categoryFilter" class="form-select col-md-2">
+<select id="categoryFilter" class="form-select w-auto col-md-2">
 
 </select>
   
     <!-- Sort Options -->
-    <select id="sortOptions" class="form-select w-auto col-md-4">
+    <select id="sortOptions" class="form-select w-auto col-md-3">
       <option value="date" selected>Sort by Date</option>
       <option value="trending">Filter by Trending</option>
       <option value="title">Sort by Title</option>
