gta 6 article and better category sorting

--- a/Discover.html
+++ b/Discover.html
@@ -27,7 +27,13 @@
         <li class="fade-in nav-item" title="Current | Discover"><a class="link active nav-link" id="activenav" aria-current="page" href="Discover.html">Discover</a></li>
     </ul>
     </div>
+    <div class="nav nav-pills justify-content-center">
+  <ul id="categoryNav" class="nav nav-underline justify-content-center">
+    <!-- Categories inserted here dynamically -->
+  </ul>
+</div>
   </nav>
+  
 <header class="py-3 mb-4 border-bottom">
     <div class="container d-flex flex-wrap justify-content-center align-items-center">
     <a class="logo d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none" href="ZAS-News.html">
@@ -38,7 +44,10 @@
         <input type="search" class="form-control" placeholder="Search..." id="searchbar" aria-label="Search">
       </form>
     </div>
+
   </header>
+
+
 <main>
 
 
@@ -50,9 +59,6 @@
 
   <!-- Filter by Author -->
 <select id="authorFilter" class="form-select w-auto">
-
-</select>
-<select id="categoryFilter" class="form-select w-auto">
 
 </select>
 
