Improve trending cards layout and card cover styling
Added Bootstrap row and alignment classes to the trendingContainer div in ZAS-News.html for better card layout. Added overflow: hidden to .card-cover in style.css to ensure content does not overflow card boundaries.

--- a/ZAS-News.html
+++ b/ZAS-News.html
@@ -117,7 +117,7 @@
 
        <div class="container px-4 py-3" id="trending-cards">
   <h2 class="pb-2 border-bottom"><b><span class="topheadlines1">Top</span> <span class="topheadlines2">Headlines</span></h2>
-  <div class="" id="trendingContainer">
+  <div class="row justify-content-center align-items-stretch g-4 py-5" id="trendingContainer">
     <!-- Cards will be injected here by JS -->
   </div>
 </div>
