--- a/article.html
+++ b/article.html
@@ -99,6 +99,8 @@
 <script type="text/javascript" src="scripts/articlescript.js"></script>
 <script src="scripts/darkmode.js"></script>
 <script type="text/javascript" src="scripts/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
 
 
 </body>
